# wasi-limited-dir-count

./: Cargo.toml  README.md  build.sh  sample.py  sample.sh
src/: lib.rs
